add app store button and initial seo

--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,30 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900" rel="stylesheet" />
-  <title>Hunched</title>
-  <meta name="description" content="Custom Technology Solutions" />
-  <meta name="author" content="Steve Evrard" />
+  <title>Hunched - Text Neck Solution</title>
+  <meta name="description"
+    content="Discover Hunched, the leading app for addressing text neck and improving your posture. Learn more about our innovative features and how we can help you maintain spinal health." />
+  <meta name="author" content="Dr. Dean Fishman, D.C." />
+  <meta name="keywords" content="text neck, posture correction, spinal health, posture app, text neck solution" />
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
   <div id="root"></div>
   <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Hunched",
+      "description": "Hunched is an application designed to help improve your posture by providing real-time feedback and exercises to combat text neck.",
+      "operatingSystem": "iOS, Android",
+      "applicationCategory": "HealthApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "0.00",
+        "priceCurrency": "USD"
+      }
+    }
+  </script>
 </body>
